--- a/web/templates/footer.html
+++ b/web/templates/footer.html
@@ -4,6 +4,6 @@
 		<p>&copy; 2013 - Bruno Garcia</p>
 	</div>
 	<div class="span6 text-right">
-		<p>Credits</p>
+		<!--<p class="show-credits">Credits</p>-->
 	<div>
 </div>
