--- a/web/assets/styles/tutti.less
+++ b/web/assets/styles/tutti.less
@@ -2,35 +2,81 @@
  * Tutti Frescuni
  * March-June 2013
  * version 0.1
+ * Colour: http://www.colourlovers.com/palette/1745515/Vegan_Songbird
  */
 
-.tutti-frescuni {
-	
-	#header {
+body {
+	overflow-y: hidden;
+}
 
-		background-color: #fff;
+.tutti-frescuni {
+
+	p, li {
+		font-family: 'Cabin', Helvetica, Arial, sans-serif;
+	}
+
+	#loading {
+		background-color: rgba(0,0,0,0.5); 
+		width: 100%; 
+		height: 100%;
+		position: absolute;
+		z-index: 9999; 
+	}
+
+	#header, 
+	#footer {
+		position: absolute;
+		z-index: 2;
+		width: 100%;
+		background-color: #fff;				
+	}
+
+	.scroller {
+		width: 100%;
+	}
+
+
+	#footer {
+		bottom: 0;
+		height: 80px;
+
+		.show-credits {
+			text-decoration: underline;
+			cursor: pointer;
+		}
+	}
+	
+	#header {	
+		top: 0;
+		height: 200px;
 
 		h1 {
 			padding-top: 20px;
+			font-family: 'Lobster', Georgia, Times, serif;
+			color: rgb(10,167,124);
 		}
 
 		.claim {
 			font-size: 18px;
-			color: #333;
+			color: #ccc;
 		}
+	}
 
-		.affix {
-			background-color: #fff;
-		}
+	#wrapper {
+		position: absolute;
+		z-index: 1;
+		width: 100%;
+		top: 200px;
+		bottom: 80px;
 	}
 
 	.products {
 
-		margin-top: 200px;
-
 		h2 {
 			text-align: center;
 			font-weight: normal;
+			font-family: 'Lobster', Georgia, Times, serif;
+			color: rgb(250,70,21);
 		}
 
 		ul {
@@ -42,7 +88,6 @@
 				margin-bottom: 35px;
 
 				a {
-					display: block;
 					font-size: 20px;
 
 					img { 
