--- a/web/templates/header.html
+++ b/web/templates/header.html
@@ -1,5 +1,5 @@
 <div class="row">
-	<div class="span12 text-center affix">
+	<div class="span12 text-center">
 		<h1>Tutti Frescuni</h1>
 		<p class="claim">
 			<em>Enjoy the best seasonal fruits &amp; vegetables</em>
