--- a/web/templates/product-details.html
+++ b/web/templates/product-details.html
@@ -1,5 +1,5 @@
 <!-- Product Details -->
-<div id="modalProduct" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div id="product-details-modal-id" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
     <h3 id="myModalLabel"><%= nameProduct %></h3>
