--- a/web/templates/product.html
+++ b/web/templates/product.html
@@ -1,3 +1,3 @@
-<a href='#modalProduct' class="more-info" data-id="<%= idProduct %>" data-toggle="modal">
+<a href='#product-details-modal-id' class="product-details-modal" data-id="<%= idProduct %>" data-toggle="modal">
     <img src="http://<%= SmallPhoto %>" /> <span class="name"><%= nameProduct %></span>
 </a>
