--- a/web/assets/styles/tutti.less
+++ b/web/assets/styles/tutti.less
@@ -28,7 +28,13 @@ body {
 		position: absolute;
 		z-index: 2;
 		width: 100%;
-		background-color: #fff;				
+		background-color: #fff;		
+		a {
+			color: #333;
+			margin-left: 10px;
+			margin-right: 10px;
+			text-decoration: underline;
+		}		
 	}
 
 	.scroller {
@@ -48,7 +54,7 @@ body {
 	
 	#header {	
 		top: 0;
-		height: 200px;
+		height: 175px;
 
 		h1 {
 			padding-top: 20px;
@@ -66,7 +72,7 @@ body {
 		position: absolute;
 		z-index: 1;
 		width: 100%;
-		top: 200px;
+		top: 160px;
 		bottom: 80px;
 	}
 
@@ -86,6 +92,7 @@ body {
 				list-style-type: none;
 				text-align: center;
 				margin-bottom: 35px;
+				
 
 				a {
 					font-size: 20px;
