Mejoras del header y fotter

--- a/web/templates/footer.html
+++ b/web/templates/footer.html
@@ -1,9 +1,6 @@
 <div class="row">
 	<hr>
 	<div class="span6">
-		<p>&copy; 2013 - Bruno Garcia</p>
+		<p><a href="mailto:hi@tuttifrescuni.com">Email</a> | <a href="https://twitter.com/TuttiFrescuni" target="_blank">@TuttiFrescuni</a> | <a href='#credits-details-modal-id' class="show-credits" data-toggle="modal">Créditos</a></p>
 	</div>
-	<div class="span6 text-right">
-		<!--<p class="show-credits">Credits</p>-->
-	<div>
 </div>
