--- a/web/templates/header.html
+++ b/web/templates/header.html
@@ -1,11 +1,9 @@
 <div class="row">
 	<div class="span12 text-center">
-		<h1>Tutti Frescuni</h1>
+		<h1>Tutti <img src="/assets/images/drawable-hdpi/ic_launcher.png"> Frescuni</h1>
 		<p class="claim">
-			<em>Enjoy the best seasonal fruits &amp; vegetables</em>
+			<em>¿Qué frutas y verduras se encuentran de temporada en {{ month }}?</em>
 		</p>
-		<hr>
-		<p>Need vitamins?. Take a look at <span class="label label-success"><%= month %></span></p>
 		<hr>
 	</div>
 </div>
