Cargar templates con Handlebars

--- a/web/templates/products-list.html
+++ b/web/templates/products-list.html
@@ -1,4 +1,4 @@
-<div id="<%= id %>" class="span6">
-    <h2><%= title %></h2>
+<div id="{{id}}" class="span6">
+    <h2>{{title}}</h2>
     <ul class="productTotal"/>
 </div>
