--- a/web/templates/product-details.html
+++ b/web/templates/product-details.html
@@ -2,10 +2,10 @@
 <div id="product-details-modal-id" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-    <h3 id="myModalLabel"><%= nameProduct %></h3>
+    <h3 id="myModalLabel">{{{ nameProduct}}}</h3>
   </div>
   <div class="modal-body">
-    <img src="http://<%= BigPhoto %>" />
+    <img src="http://{{BigPhoto}}" />
   </div>
 </div>
 
