--- a/web/templates/credits.html
+++ b/web/templates/credits.html
@@ -7,22 +7,26 @@
   <div class="modal-body">
 
   	<h4>Desarrollo</h4>
-  	<p><a href="http://bruno.garciaechegaray.com" target="_blank">Bruno Garcia</a></p>
-    <p>Esta idea la he ido desarrollando como proyecto de fin de curso para el <a href="http://www.todofp.es/todofp/formacion/que-y-como-estudiar/oferta-formativa/familias/informatica-comunicaciones/desarrollo-aplicaciones-multiplataforma.html">FP Desarrollo de Aplicaciones Multiplataforma</a>. Si tienes curiosidad puedes ver la <a href="http://www.tuttifrescuni.com/seim/">presentanción</a> que realice en su momento.</p>
-    <p>También puedes navegar por el <a href="https://github.com/brunogarcia/TuttiFrescuni">código de la aplicación</a> en Github.</p>
-    <p>He utilizado varias librerías de código abierto: <a href="http://backbonejs.org/">Backbone</a>, <a href="http://underscorejs.org/">Underscore</a>, <a href="http://jquery.com/">jQuery</a>, <a href="http://requirejs.org/">Requiere.js</a> (plugins: <a href="http://requirejs.org/docs/download.html#text">text</a> &amp; <a href="https://github.com/millermedeiros/requirejs-plugins">json</a>), <a href="http://www.slimframework.com/">Slim</a>, <a href="http://cubiq.org/iscroll-4">iScroll</a>, <a href="http://fgnass.github.io/spin.js/">Spin.js</a>, <a href="http://handlebarsjs.com/">Handlebars</a> (plugin: <a href="https://github.com/jfparadis/requirejs-handlebars">hbars</a>), <a href="http://lesscss.org/">LESS</a> y <a href="http://twitter.github.io/bootstrap/">Twitter Bootstrap</a>.  Y un anillo para gobernalos a todos: <a href="http://www.sublimetext.com/">Sublime Text</a>.</p>
+  	
+    <p><a href="http://bruno.garciaechegaray.com" target="_blank">Bruno Garcia</a></p>
+   
+    <p>Esta idea la he ido desarrollando como proyecto de fin de curso para el <a href="http://www.todofp.es/todofp/formacion/que-y-como-estudiar/oferta-formativa/familias/informatica-comunicaciones/desarrollo-aplicaciones-multiplataforma.html" target="_blank">FP Desarrollo de Aplicaciones Multiplataforma</a>. Si tienes curiosidad puedes ver la <a href="http://www.tuttifrescuni.com/seim/" target="_blank">presentanción</a> que realice en su momento.</p>
+    
+    <p>También puedes navegar por el <a href="https://github.com/brunogarcia/TuttiFrescuni" target="_blank">código de la aplicación</a> en Github.</p>
+    
+    <p>He utilizado varias librerías de código abierto: <a href="http://backbonejs.org/" target="_blank">Backbone</a>, <a href="http://underscorejs.org/" target="_blank">Underscore</a>, <a href="http://jquery.com/" target="_blank">jQuery</a>, <a href="http://requirejs.org/" target="_blank">Requiere.js</a> (plugins: <a href="http://requirejs.org/docs/download.html#text" target="_blank">text</a> &amp; <a href="https://github.com/millermedeiros/requirejs-plugins" target="_blank">json</a>), <a href="http://www.slimframework.com/" target="_blank">Slim</a>, <a href="http://cubiq.org/iscroll-4" target="_blank">iScroll</a>, <a href="http://fgnass.github.io/spin.js/" target="_blank">Spin.js</a>, <a href="http://handlebarsjs.com/" target="_blank">Handlebars</a> (plugin: <a href="https://github.com/jfparadis/requirejs-handlebars" target="_blank">hbars</a>), <a href="http://lesscss.org/" target="_blank">LESS</a> y <a href="http://twitter.github.io/bootstrap/" target="_blank">Twitter Bootstrap</a>.  Y un anillo para gobernalos a todos: <a href="http://www.sublimetext.com/">Sublime Text</a>.</p>
 
   	<h4>Diseño gráfico</h4>
   	<p>El logotipo, el favicon y el fabuloso nombre han sido creados por la ilustradora <a href="http://evasantos.tumblr.com/" target="_blank">Eva Santos</a>.</p>
 
   	<h4>Datos</h4>
-  	<p>Gran parte de los datos han sido recopilado de la campaña <a href="http://www.alimentacion.es/es/campanas/frutas/frutas_verduras_temporada/" target="_blank"><em>Frutas y verduras de temporada</em></a> del <a href="http://www.magrama.gob.es/">Ministerio de Agricultura, Alimentación y Medio Ambiente</a></p>
+  	<p>Gran parte de los datos han sido recopilados de la campaña <a href="http://www.alimentacion.es/es/campanas/frutas/frutas_verduras_temporada/" target="_blank"><em>Frutas y verduras de temporada</em></a> del <a href="http://www.magrama.gob.es/" target="_blank">Ministerio de Agricultura, Alimentación y Medio Ambiente</a></p>
 
   	<h4>Fotografías:</h4>
     <p>Hemos utilizado fotografías copyleft recopiladas con la <a href="www.flickr.com/services/api/" target="_blank">API de Flickr</a>. Gracias a cada una de las personas que han compartido estas imágenes con la comunidad:</p>
   	{{#list people}}
   		{{nameProduct}}: <a href="http://www.flickr.com/photos/{{flickrUser}}/{{flickrPhoto}}" target="_blank">{{flickrUser}}</a>
-	{{/list}}
+	   {{/list}}
 
     <h4>Versión</h4>
     <p>Beta 0.1</p>
