Cambio de nombre a la libreria spin.js

--- a/web/templates/credits.html
+++ b/web/templates/credits.html
@@ -28,7 +28,7 @@
   	<p>Gran parte de los datos han sido recopilados de la campaña <a href="http://www.alimentacion.es/es/campanas/frutas/frutas_verduras_temporada/" target="_blank"><em>Frutas y verduras de temporada</em></a> del <a href="http://www.magrama.gob.es/" target="_blank">Ministerio de Agricultura, Alimentación y Medio Ambiente</a></p>
 
   	<h4>Fotografías:</h4>
-    <p>Hemos utilizado fotografías copyleft recopiladas con la <a href="www.flickr.com/services/api/" target="_blank">API de Flickr</a>. Gracias a cada una de las personas que han compartido estas imágenes con la comunidad:</p>
+    <p>Hemos utilizado fotografías copyleft recopiladas con la <a href="http://www.flickr.com/services/api/" target="_blank">API de Flickr</a>. Gracias a cada una de las personas que han compartido estas imágenes con la comunidad:</p>
   	{{#list people}}
   		{{nameProduct}}: <a href="http://www.flickr.com/photos/{{flickrUser}}/{{flickrPhoto}}" target="_blank">{{flickrUser}}</a>
 	   {{/list}}
